News in 43.alpha, 2022-07-13
----------------------------
* Temporarily disable hardware accelerated rendering [#60]
* Fix build with newer versions of Meson [#59]
* Translation updates

News in 41.2, 2021-10-01
------------------------
* More appdata fixes
* Translation updates

News in 41.1, 2021-09-17
------------------------
* Appdata fixes

News in 41.0, 2021-09-17
------------------------
* Translation updates

News in 41.rc, 2021-09-04
-------------------------
* Translation updates

News in 41.beta, 2021-08-14
---------------------------
* Translation updates
* Fix build in sandboxed environments with no network
* Update list of translatable files [#47]
* Switch to gi-docgen to build the libdevhelp API reference
* Move the "Show side panel" action from the menu to the header bar [!36]
* Fix donation link in the appdata information [!39]
* Build against WebKitGTK 4.1 [!38]
* Build against GLib 2.70 [!40]

News in 41.alpha, 2021-07-09
----------------------------
* Translation updates
* Drop the dependency on AMTK
* Build fixes with newer versions of various dependencies
* Follow the HIG best practices for the main menu button
* Drop the old "simple" menu fallback
* Display find shortcuts in the Keyboard Shortcuts dialog [#27]
* Search for Devhelp files under `$datadir/doc` [#29]
* Set the User Agent for client-side detection [#28]
* Add a custom CSS to allow documentation generators to control the
  rendering under Devhelp

News in 40.0, 2021-04-12
------------------------
* Translation updates.

News in 40.alpha, 2021-01-11
----------------------------
* New GNOME versioning scheme.
* Build: add plugin_emacs, plugin_gedit and plugin_vim options.
* Improve the Shortcuts window.
* Translation updates.

News in 3.38.1, 2020-11-20
--------------------------
* Translation updates.

News in 3.38.0, 2020-09-11
--------------------------
* Translation updates.

News in 3.37.1, 2020-05-29
--------------------------
* Enable WebKitGTK sandbox.