@@ -1,3 +1,7 @@
+News in 43.beta, 2022-08-10
+---------------------------
+* Translation updates
+
 News in 43.alpha, 2022-07-13
 ----------------------------
 * Temporarily disable hardware accelerated rendering [#60]
